update - fix overflow on settings div - set settings div to automatically fill depending on size of window - remove uneeded css from index

--- a/GUI/ETVR/src/styles/index.css
+++ b/GUI/ETVR/src/styles/index.css
@@ -55,6 +55,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .main-div {
